# tools_demo

./: README.c
1_cl360_web_0410/: index.html  readme
1_cl360_web_0410/html/: .project  Rec  downPath  ppt  rtmp_log
2_http_slave_demo_20160720/: Makefile  readme
2_http_slave_demo_20160720/doc/: ARM_AND_X86_Makefile
2_http_slave_demo_20160720/include/: common.h  isapi_api_client.h  xml_base.h  xml_common.h  xml_parse_contentmgmt.h  xml_parse_event.h  xml_parse_security.h  xml_parse_sundry.h  xml_parse_system.h
2_http_slave_demo_20160720/src/: common.c  isapi_api_client.c  test_demo.c  xml_base.c  xml_parse_contentmgmt.c  xml_parse_event.c  xml_parse_security.c  xml_parse_sundry.c  xml_parse_system.c
3_user_libxml2_20170504/: Makefile  readme
3_user_libxml2_20170504/doc/: X86_Makefile  hospitalInformation.xml
3_user_libxml2_20170504/include/: common.h  http_client.h  readme  rq_parse_xml_api.h  user_socket.h
3_user_libxml2_20170504/lib/: readme
3_user_libxml2_20170504/src/: http_client.c  print.c  rq_xml_base.c  rq_xml_msg_management.c  user_sock.c  xml_parse_RQTest.c
5_TCPServerAndClient/: TCP_demo  make.sh  readme.txt
5_TCPServerAndClient/include/: common.h  socket_use.h
5_TCPServerAndClient/src/: CMakeLists.txt  extern_tools.c  io_process.c  socket_use.c  test_Demo.c  udp_use.c
6_Libcurl_0930/: CMakeLists.txt
6_Libcurl_0930/doc/: libcurl_API-merlin-20170930.docx  readme.txt
6_Libcurl_0930/include/: common.h  extern_libcurl.h
6_Libcurl_0930/src/: CMakeLists.txt  extern_libcurl.c  test_Demo.c
8_DataStrcute/: String1.cc  buildMerlin.sh  c_basic.c  data_strcut.c  list.c  listAll.cc  listlinkloop.tar  myPthread.c  myString.cc  mystrcpy.c  pthreead.c  sort.c  sort1.c  timer.c  writtenTestProgram.c
9_JavaDemo/: HelloWorld.java
Demo_c++/: BKCMakeLists.txt  CMakeLists.txt  make.sh
Demo_c++/src/: BKCMakeLists.txt  CMakeLists.txt  main.cc  main.cpp  temp.c  test_glib.c  utils.c  utils.h  utils_ffmpeg.h  work_ZY.cpp
Demo_c++/src/temp/: utils_ffmpeg.cpp  work_ZY.cpp
NTPClient/: ntp_client.c  ntp_client_参考.c  ntp_server_list.conf
androidProj/: Android.mk  hello1.cpp  main.cpp  readme.txt
androidProj/src/: demo.cpp  (+1 more)
(+285 files in other folders)
