add_executable(TCP_demo ./test_Demo.c ./client_test.c ./print.c
	./io_process.c ./socket_use.c ./extern_tools.c)
#target_link_libraries(pthread)
#add_executable(mainStarter ./mainStarter/main.cc ./mainStarter/Starter.cc)
#target_link_libraries(mainStarter gdlp_base gdlp_adpters)
#install(TARGETS mainStarter  DESTINATION bin)

